deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: employeeapi

spec:
  replicas: 2

  selector:
    matchLabels:
      app: employeeapi

  template:
    metadata:
      labels:
        app: employeeapi

    spec:
      containers:
      - name: employeeapi
        image: sdhar2/employeeapi:latest
        imagePullPolicy: Always

        ports:
        - containerPort: 8080
