service.yaml
apiVersion: v1
kind: Service

metadata:
  name: employeeapi-service

spec:
  selector:
    app: employeeapi

  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080

  type: NodePort
