ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: employeeapi-ingress

spec:
  rules:
  - host: employeeapi.local

    http:

      paths:
      - path: /

        pathType: Prefix

        backend:

          service:
            name: employeeapi-service

            port:
              number: 8080
